@@ -10,6 +10,7 @@
 #include<stdio.h>
 #include<math.h>
 #include<string.h>
+#include<ctype.h>
 
 #include "deg2str.h"
 
